// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Camera props testing className 1`] = `
<div
  className="uu5-bricks-camera my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing controlled 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing controlled 2`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing controlled 3`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing controlled 4`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing default props 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing disabled 1`] = `
<div
  className="uu5-bricks-camera uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing disabled 2`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing disabled 3`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing disabled 4`] = `
<div
  className="uu5-bricks-camera uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing hidden 1`] = `
<div
  className="uu5-bricks-camera uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing hidden 2`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing hidden 3`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing hidden 4`] = `
<div
  className="uu5-bricks-camera uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing id 1`] = `
<div
  className="uu5-bricks-camera"
  id="myId"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing mainAttrs 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing name 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 2`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 3`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 4`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 5`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 6`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 7`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 8`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 9`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 10`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 11`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 12`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 13`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 14`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Camera props testing nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Camera props testing nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Camera props testing nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Camera props testing nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Camera props testing nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Camera props testing noIndex 1`] = `
<div
  className="uu5-bricks-camera uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing noIndex 2`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing noIndex 3`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing noIndex 4`] = `
<div
  className="uu5-bricks-camera uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing pureRender 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing pureRender 2`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing pureRender 3`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing pureRender 4`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing selected 1`] = `
<div
  className="uu5-bricks-camera uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing selected 2`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing selected 3`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing selected 4`] = `
<div
  className="uu5-bricks-camera uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing style 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing style 2`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing style 3`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing style 4`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing tooltip 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;
